--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
         git pull
         git add .
         git diff
-        git config --local user.email "your gitEmail"
-        git config --local user.name "you gitName"
+        git config --local user.email "kimdu005@gmail.com"
+        git config --local user.name "doyoon530"
         git commit -m "commit Message"
         git push
